Change swagger file and add one more test
