# src/main/java/org/zalando/pazuzu/feature/FeatureMetaDto.java
@@ -91,7 +91,7 @@ public class FeatureMetaDto {
 
     @Override
     public int hashCode() {
-        return Objects.hash(name);
+        return Objects.hash(name, description, author, updatedAt, dependencies);
     }
 
     @Override
